--- a/layouts/partials/custom_js.html
+++ b/layouts/partials/custom_js.html
@@ -1,2 +1,3 @@
 <!-- Neural Frontier - Custom JavaScript -->
 <script src="/js/neural-frontier.js" defer></script>
+<script src="/js/live-stats.js" defer></script>
